Add --single-file option

--- a/bin/build
+++ b/bin/build
@@ -13,6 +13,7 @@ const command = clap.create('build', '[config]')
     .option('-c, --config <filename>', 'Path to config (JavaScript or JSON file)')
     .option('-m, --model <name>', 'Specify a model (multi-model mode only)')
     .option('-o, --output <path>', 'Path for a build result', resolveCwd, 'build')
+    .option('-s, --single-file', 'Output a model build as a single file')
     .option('--pretty-data [indent]', 'Pretty print of data.json', (value = 4) => Number(value) || false, false)
     .option('--cleanup', 'Delete all files of output path before saving a result to it')
     .version(require('../package.json').version)
