Fix link to documentation in modelfree mode and update build

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "lint": "eslint src tools client",
     "build": "npm run build:esm && npm run build:css",
+    "build-docs": "npm run build && node bin/build -o docs",
     "build:esm": "npm run build:umd && node scripts/lib-es5-to-es6",
     "build:umd": "node scripts/build-client-libs && browserify client/lib.js -o dist/lib.umd.js --standalone discovery --im -t [ babelify --presets [ @babel/preset-env ] ]",
     "build:css": "node scripts/build-css",
