--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "hitext": "^1.0.0-alpha.2",
     "hitext-prismjs": "^1.0.2",
     "jora": "1.0.0-alpha.10",
-    "prismjs": "^1.17.1"
+    "prismjs": "^1.17.1",
+    "resolve": "^1.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -43,8 +44,7 @@
     "browserify": "^16.5.0",
     "css-tree": "^1.0.0-alpha.34",
     "eslint": "^6.3.0",
-    "mime": "^2.4.4",
-    "resolve": "^1.12.0"
+    "mime": "^2.4.4"
   },
   "files": [
     "dist",
