--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "hitext": "^1.0.0-alpha.2",
     "hitext-prismjs": "^1.0.2",
     "jora": "1.0.0-alpha.10",
-    "prismjs": "^1.17.1",
-    "resolve": "^1.12.0"
+    "prismjs": "^1.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -42,9 +41,7 @@
     "@discoveryjs/cli": "^1.0.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
-    "css-tree": "^1.0.0-alpha.34",
-    "eslint": "^6.3.0",
-    "mime": "^2.4.4"
+    "eslint": "^6.3.0"
   },
   "files": [
     "dist",
