dist/lib.* -> dist/discovery.*

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "repository": "discoveryjs/discovery",
   "keywords": [],
-  "main": "./dist/lib.umd.js",
+  "main": "dist/discovery.umd.js",
+  "unpkg": "dist/discovery.umd.js",
+  "jsdelivr": "dist/discovery.umd.js",
   "browser": {
     "/gen/jora.js": "./dist/gen/jora.js",
     "/gen/hitext": "./dist/gen/hitext.js",
@@ -20,7 +22,7 @@
     "build": "npm run build:esm && npm run build:css",
     "build-docs": "npm run build && discovery-build -o docs",
     "build:esm": "npm run build:umd && node scripts/convert-lib-to-es6",
-    "build:umd": "node scripts/build-client-libs && browserify src/lib.js -o dist/lib.umd.js --standalone discovery --im -t [ babelify --presets [ @babel/preset-env ] ]",
+    "build:umd": "node scripts/build-client-libs && browserify src/lib.js -o dist/discovery.umd.js --standalone discovery --im -t [ babelify --presets [ @babel/preset-env ] ]",
     "build:css": "node scripts/build-css",
     "prepublishOnly": "npm run build"
   },
