--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run build:esm && npm run build:css",
     "build-docs": "npm run build && discovery-build -o docs",
     "build:esm": "npm run build:umd && node scripts/convert-lib-to-es6",
-    "build:umd": "node scripts/build-client-libs && browserify src/lib.js -o dist/discovery.umd.js --standalone discovery --im -t [ babelify --presets [ @babel/preset-env ] ]",
+    "build:umd": "node scripts/build-client-libs && browserify src/lib.js --standalone discovery --im -t [ babelify --presets [ @babel/preset-env ] ] | terser --compress --mangle -o dist/discovery.umd.js",
     "build:css": "node scripts/build-css",
     "prepublishOnly": "npm run build"
   },
@@ -43,7 +43,8 @@
     "@discoveryjs/cli": "^1.3.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
-    "eslint": "^6.3.0"
+    "eslint": "^6.3.0",
+    "terser": "^4.4.2"
   },
   "files": [
     "dist",
