--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "scripts": {
         "lint": "eslint libs scripts src",
-        "tsc": "rimraf build && cpx 'src/**/*.css' dist && tsc || true",
+        "tsc": "rimraf dist && cpx 'src/**/*.css' dist && tsc || true",
         "build": "npm run tsc && npm run build:esm && npm run build:css",
         "build-docs": "npm run build && discovery-build -o docs",
         "build:esm": "npm run build:umd && node scripts/convert-lib-to-es6",
