--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "codemirror": "^5.52.2",
         "hitext": "^1.0.0-alpha.2",
         "hitext-prismjs": "^1.0.2",
-        "jora": "1.0.0-alpha.13",
+        "jora": "1.0.0-beta.1",
         "prismjs": "^1.19.0"
     },
     "devDependencies": {
