--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     },
     "dependencies": {
         "codemirror": "^5.52.2",
-        "hitext": "^1.0.0-alpha.2",
-        "hitext-prismjs": "^1.0.2",
+        "hitext": "^1.0.0-beta.1",
+        "hitext-prismjs": "^1.1.0",
         "jora": "1.0.0-beta.1",
         "prismjs": "^1.19.0"
     },
