--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "unpkg": "dist/discovery.umd.js",
     "jsdelivr": "dist/discovery.umd.js",
     "browser": {
-        "/gen/jora.js": "./dist/gen/jora.js",
+        "/gen/jora": "./dist/gen/jora.js",
         "/gen/hitext": "./dist/gen/hitext.js",
         "/gen/hitext-prismjs": "./dist/gen/hitext-prismjs.js",
         "/gen/prismjs": "./dist/gen/prismjs.js",
@@ -33,6 +33,7 @@
         "hitext": "^1.0.0-beta.1",
         "hitext-prismjs": "^1.1.0",
         "jora": "1.0.0-beta.1",
+        "json5": "^2.1.3",
         "prismjs": "^1.19.0"
     },
     "devDependencies": {
