--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "hitext-prismjs": "^1.1.0",
         "jora": "1.0.0-beta.2",
         "json5": "^2.1.3",
+        "marked": "^1.1.0",
         "prismjs": "^1.19.0"
     },
     "devDependencies": {
