--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "build:esm": "npm run build:umd && node scripts/convert-lib-to-es6",
         "build:umd": "node scripts/build-js | terser --compress --mangle -o dist/discovery.umd.js",
         "build:css": "node scripts/build-css",
-        "prepublishOnly": "npm run build"
+        "prepublishOnly": "npm run build",
+        "cypress": "npx cypress open",
+        "start:server": "npx discovery -c ./cypress/fixtures/single-model/.discoveryrc.js",
+        "test": "./cypress/test.sh"
     },
     "engines": {
         "node": ">=8.0.0"
@@ -43,7 +46,9 @@
         "@discoveryjs/cli": "^1.13.0",
         "babelify": "^10.0.0",
         "browserify": "^16.5.0",
+        "cypress": "^5.3.0",
         "eslint": "^6.8.0",
+        "eslint-plugin-cypress": "^2.11.2",
         "terser": "^5.3.3"
     },
     "files": [
