--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "@discoveryjs/json-ext": "^0.3.0",
+        "billboard.js": "^2.1.2",
         "codemirror": "^5.52.2",
         "hitext": "^1.0.0-beta.1",
         "hitext-prismjs": "^1.1.0",
