--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "scripts": {
         "lint": "eslint libs scripts src",
         "build": "npm run build:esm && npm run build:css",
-        "build-docs": "npm run build && discovery-build -o docs",
+        "build-docs": "npm run build && discovery-build -o docs --isolate-styles",
         "build:esm": "npm run build:umd && node scripts/convert-lib-to-es6",
         "build:umd": "node scripts/build-js | terser --compress --mangle -o dist/discovery.umd.js",
         "build:css": "node scripts/build-css",
