Fix eslint setup and missed warnings

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
     "env": {
         "node": true,
         "mocha": true,
-        "chai": true,
+        "es6": true,
         "cypress/globals": true
     },
     "globals": {
