--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "hitext": "^1.0.0-beta.1",
         "hitext-prismjs": "^1.1.0",
         "jora": "1.0.0-beta.4",
+        "marked": "^1.2.3",
         "prismjs": "^1.21.0"
     },
     "devDependencies": {
