--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "/gen/@discoveryjs/json-ext.js": "./dist/gen/@discoveryjs/json-ext.js",
         "/gen/hitext": "./dist/gen/hitext.js",
         "/gen/hitext-prismjs": "./dist/gen/hitext-prismjs.js",
+        "/gen/marked": "./dist/gen/marked.js",
         "/gen/prismjs": "./dist/gen/prismjs.js",
         "/gen/codemirror": "./dist/gen/codemirror.js"
     },
