--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
         "@discoveryjs/json-ext": "^0.4.0",
         "codemirror": "^5.52.2",
         "hitext": "^1.0.0-beta.1",
-        "hitext-prismjs": "^1.1.0",
         "jora": "1.0.0-beta.5",
-        "marked": "^1.2.3",
-        "prismjs": "^1.21.0"
+        "marked": "^1.2.3"
     },
     "devDependencies": {
         "@discoveryjs/cli": "^1.14.3",
