--- a/package.json
+++ b/package.json
@@ -6,18 +6,9 @@
     "license": "MIT",
     "repository": "discoveryjs/discovery",
     "keywords": [],
-    "main": "dist/discovery.js",
-    "unpkg": "dist/discovery.umd.js",
-    "jsdelivr": "dist/discovery.umd.js",
-    "browser": {
-        "/gen/jora.js": "./dist/gen/jora.js",
-        "/gen/@discoveryjs/json-ext.js": "./dist/gen/@discoveryjs/json-ext.js",
-        "/gen/hitext": "./dist/gen/hitext.js",
-        "/gen/hitext-prismjs": "./dist/gen/hitext-prismjs.js",
-        "/gen/marked": "./dist/gen/marked.js",
-        "/gen/prismjs": "./dist/gen/prismjs.js",
-        "/gen/codemirror": "./dist/gen/codemirror.js"
-    },
+    "main": "src/lib.js",
+    "unpkg": "dist/discovery.js",
+    "jsdelivr": "dist/discovery.js",
     "scripts": {
         "lint": "eslint scripts src",
         "build": "npm run build:js && npm run build:css",
@@ -43,7 +34,7 @@
     "devDependencies": {
         "@discoveryjs/cli": "^1.14.3",
         "cypress": "^5.3.0",
-        "esbuild": "^0.7.21",
+        "esbuild": "^0.8.26",
         "eslint": "^6.8.0",
         "eslint-plugin-cypress": "^2.11.2"
     },
