--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "jsdelivr": "dist/discovery.js",
     "scripts": {
         "lint": "eslint scripts src",
-        "build": "npm run build:js && npm run build:css",
+        "build": "npm run build:js && npm run build:css && npm run build:loader",
         "build:js": "esbuild src/lib.js --outfile=dist/discovery.js --bundle --define:global=window --format=esm --minify --sourcemap",
         "build:css": "esbuild src/lib.css --outfile=dist/discovery.css --bundle --minify --loader:.svg=dataurl",
-        "build-loader": "esbuild src/loader.js --outfile=dist/discovery-loader.js --bundle --define:global=window --format=esm --minify --sourcemap",
-        "build-gh-pages": "npm run build && discovery-build -o .gh-pages --isolate-styles",
+        "build:loader": "esbuild src/loader.js --outfile=dist/discovery-loader.js --bundle --define:global=window --format=esm --minify --sourcemap",
+        "build-gh-pages": "npm run build && discovery-build -o .gh-pages",
         "prepublishOnly": "npm run build",
         "cypress": "npx cypress open",
         "cypress:server": "discovery -c ./cypress/fixtures/single-model/.discoveryrc.js -p 8124",
