--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@discoveryjs/discovery",
-    "version": "1.0.0-beta.52",
+    "version": "1.0.0-beta.53",
     "description": "Hackable JSON discovery tool",
     "author": "Roman Dvornov <rdvornov@gmail.com> (https://github.com/lahmatiy)",
     "license": "MIT",
@@ -33,7 +33,7 @@
         "marked": "^1.2.7"
     },
     "devDependencies": {
-        "@discoveryjs/cli": "^1.15.0",
+        "@discoveryjs/cli": "^2.0.0-beta.1",
         "cypress": "^5.3.0",
         "esbuild": "^0.8.42",
         "eslint": "^6.8.0",
