--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - run: npm ci --ignore-scripts
+      - run: npm ci
       - run: npm run build-gh-pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
