--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build:js": "esbuild src/lib.js --outfile=dist/discovery.js --bundle --define:global=window --format=esm --minify --sourcemap",
         "build:css": "esbuild src/lib.css --outfile=dist/discovery.css --bundle --minify --loader:.svg=dataurl",
         "build:preloader": "esbuild src/preloader.js --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap",
-        "build-gh-pages": "discovery-build -o .gh-pages --cleanup",
+        "build-gh-pages": "discovery-build -o .gh-pages --clean",
         "prepublishOnly": "npm run build",
         "cypress": "npx cypress open",
         "cypress:server": "discovery -c ./cypress/fixtures/single-model/.discoveryrc.js -p 8124",
@@ -33,9 +33,9 @@
         "marked": "^1.2.7"
     },
     "devDependencies": {
-        "@discoveryjs/cli": "2.0.0-beta.3",
+        "@discoveryjs/cli": "2.0.0-beta.6",
         "cypress": "^5.3.0",
-        "esbuild": "^0.8.42",
+        "esbuild": "^0.8.46",
         "eslint": "^6.8.0",
         "eslint-plugin-cypress": "^2.11.2"
     },
