--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build:preloader": "npm run build:preloader:js && npm run build:preloader:css",
         "build:preloader:js": "esbuild src/preloader.js --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap",
         "build:preloader:css": "esbuild src/preloader.css --outfile=dist/discovery-preloader.css  --bundle --minify --loader:.svg=dataurl",
-        "build-gh-pages": "discovery-build -o .gh-pages --clean && mv .gh-pages/default/* .gh-pages",
+        "build-gh-pages": "discovery-build -o .gh-pages --clean",
         "prepublishOnly": "npm run build",
         "cypress": "npx cypress open",
         "cypress:server": "discovery -c ./cypress/fixtures/single-model/.discoveryrc.js -p 8124",
@@ -35,9 +35,9 @@
         "marked": "^2.0.0"
     },
     "devDependencies": {
-        "@discoveryjs/cli": "2.0.0-beta.9",
+        "@discoveryjs/cli": "2.0.0-beta.11",
         "cypress": "^5.3.0",
-        "esbuild": "^0.8.55",
+        "esbuild": "~0.9.2",
         "eslint": "^6.8.0",
         "eslint-plugin-cypress": "^2.11.2"
     },
