--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@discoveryjs/discovery",
-    "version": "1.0.0-beta.60",
+    "version": "1.0.0-beta.61",
     "description": "Hackable JSON discovery tool",
     "author": "Roman Dvornov <rdvornov@gmail.com> (https://github.com/lahmatiy)",
     "license": "MIT",
@@ -35,7 +35,7 @@
         "marked": "^2.0.0"
     },
     "devDependencies": {
-        "@discoveryjs/cli": "2.0.0-beta.11",
+        "@discoveryjs/cli": "^2.0.0-beta.12",
         "cypress": "^5.3.0",
         "esbuild": "~0.11.2",
         "eslint": "^6.8.0",
