--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
         "@discoveryjs/json-ext": "^0.5.7",
         "codemirror": "^5.65.2",
         "hitext": "^1.0.0-beta.1",
-        "jora": "1.0.0-beta.6",
-        "marked": "^4.0.14"
+        "jora": "1.0.0-beta.7",
+        "marked": "^4.0.18"
     },
     "devDependencies": {
-        "@discoveryjs/cli": "^2.0.0-beta.14",
+        "@discoveryjs/cli": "^2.1.1",
         "cypress": "^9.5.4",
-        "esbuild": "~0.14.36",
-        "eslint": "^8.13.0",
+        "esbuild": "~0.14.49",
+        "eslint": "^8.19.0",
         "eslint-plugin-cypress": "^2.12.1"
     },
     "files": [
