Add type: module

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "repository": "discoveryjs/discovery",
     "keywords": [],
+    "type": "module",
     "main": "src/lib.js",
     "unpkg": "dist/discovery.js",
     "jsdelivr": "dist/discovery.js",
@@ -18,8 +19,8 @@
         "build:preloader:js": "esbuild src/preloader.js --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap",
         "build:preloader:css": "esbuild src/preloader.css --outfile=dist/discovery-preloader.css  --bundle --minify --loader:.svg=dataurl",
         "build-gh-pages": "discovery-build -o .gh-pages --clean",
-        "prepublishOnly": "node scripts/bake-version && npm run build",
-        "postpublish": "node scripts/bake-version --rollback",
+        "prepublishOnly": "node scripts/bake-version.cjs && npm run build",
+        "postpublish": "node scripts/bake-version.cjs --rollback",
         "cypress": "npx cypress open",
         "cypress:server": "discovery -c ./cypress/fixtures/single-model/.discoveryrc.js -p 8124",
         "start": "discovery -c models",
