Fix default models

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "postpublish": "node scripts/bake-version.cjs --rollback",
         "cypress": "npx cypress open",
         "cypress:server": "discovery -c ./cypress/fixtures/single-model/.discoveryrc.js -p 8124",
-        "start": "discovery -c models",
+        "start": "discovery -c models/index.cjs",
         "test": "./cypress/test.sh"
     },
     "engines": {
