--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "jsdelivr": "dist/discovery.js",
     "scripts": {
         "lint": "eslint cypress models src",
-        "build": "npm run build:js && npm run build:css && npm run build:preloader",
-        "build:js": "esbuild src/lib.js --outfile=dist/discovery.js --bundle --define:global=window --format=esm --minify --sourcemap",
+        "build": "npm run build:js && npm run build:css && npm run build:preloader && npm run build:embed-host",
+        "build:js": "esbuild src/lib.js --outfile=dist/discovery.js --bundle --define:global=window --format=esm --minify --sourcemap=external",
         "build:css": "esbuild src/lib.css --outfile=dist/discovery.css --bundle --minify --loader:.svg=dataurl",
-        "build:embed-host": "esbuild src/extensions/embed-host.js --outfile=dist/discovery-embed-host.js --bundle --define:global=window --format=esm --sourcemap=inline",
+        "build:embed-host": "esbuild src/extensions/embed-host.js --outfile=dist/discovery-embed-host.js --bundle --define:global=window --format=esm --minify --sourcemap=external",
         "build:preloader": "npm run build:preloader:js && npm run build:preloader:css",
-        "build:preloader:js": "esbuild src/preloader.js --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap",
+        "build:preloader:js": "esbuild src/preloader.js --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap=external",
         "build:preloader:css": "esbuild src/preloader.css --outfile=dist/discovery-preloader.css --bundle --minify --loader:.svg=dataurl",
         "build-gh-pages": "discovery-build -o .gh-pages --clean",
         "prepublishOnly": "node scripts/bake-version.cjs && npm run build",
