--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+    "include": [
+        "src/**/*.ts"
+    ],
     "compilerOptions": {
         "lib": ["ES2022", "dom", "dom.iterable"],
         "moduleResolution": "NodeNext",
