--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         "module": "NodeNext",
         "target": "ES2022",
         "allowJs": true,
-        "outDir": "./build", // there are errors without the option (a value doesn't make sense) because of allowJs: true
-        "strictNullChecks": true
+        "outDir": "./lib", // there are errors without the option (a value doesn't make sense) because of allowJs: true
+        // "noImplicitAny": true,
+        "strictNullChecks": true,
+        "declaration": true
     }
 }
