--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "devDependencies": {
         "@discoveryjs/cli": "^2.8.0",
         "@discoveryjs/scan-fs": "^4.0.0",
+        "@stylistic/eslint-plugin": "^2.6.2",
+        "@typescript-eslint/eslint-plugin": "^7.18.0",
+        "@typescript-eslint/parser": "^7.18.0",
         "cypress": "^13.3.0",
         "esbuild": "~0.23.0",
         "eslint": "^8.50.0",
