Fix cypress test run on GitHub actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - run: npm run transpile
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
