--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '20.x'
+
+      - run: npm ci
       - run: npm run transpile
 
       - name: Cypress run
