--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm ci
+      - run: npm run transpile
       - run: npm run build-gh-pages
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
