--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "build:preloader": "npm run build:preloader:js && npm run build:preloader:css",
         "build:preloader:js": "esbuild src/preloader.ts --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap=external",
         "build:preloader:css": "esbuild src/preloader.css --outfile=dist/discovery-preloader.css --bundle --minify --loader:.svg=dataurl",
-        "build-gh-pages": "discovery-build -o .gh-pages --clean",
+        "build-gh-pages": "npm run transpile && discovery-build -o .gh-pages --clean",
         "transpile": "node scripts/transpile.js",
         "prepublishOnly": "npm run transpile && npm run build",
         "cypress": "npx cypress open",
