--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "jsdelivr": "dist/discovery.js",
     "types": "./lib/lib.d.ts",
     "exports": {
-        ".": "./lib/lib.js",
+        ".": {
+            "discovery-dev": "./src/lib.js",
+            "default": "./lib/lib.js"
+        },
         "./dist/*": "./dist/*",
         "./lib/*": "./lib/*",
-        "./src/*": "./lib/*",
+        "./src/*": {
+            "discovery-dev": "./src/*",
+            "default": "./lib/*"
+        },
         "./package.json": "./package.json"
     },
     "scripts": {
