--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     ],
     "compilerOptions": {
         "lib": ["ES2022", "DOM", "DOM.iterable"],
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
+        "moduleResolution": "Bundler",
+        "module": "ESNext",
         "target": "ES2022",
         "allowJs": true,
         "outDir": "./lib", // there are errors without the option (a value doesn't make sense) because of allowJs: true
