--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "author": "Roman Dvornov <rdvornov@gmail.com> (https://github.com/lahmatiy)",
     "license": "MIT",
     "repository": "discoveryjs/discovery",
-    "keywords": [],
+    "keywords": [
+        "json",
+        "jsonxl",
+        "query",
+        "processing",
+        "visualization",
+        "analysis"
+    ],
     "type": "module",
     "main": "lib/lib.js",
     "unpkg": "dist/discovery.js",
@@ -39,7 +46,7 @@
         "build:preloader": "npm run build:preloader:js && npm run build:preloader:css",
         "build:preloader:js": "esbuild src/preloader.ts --outfile=dist/discovery-preloader.js --bundle --define:global=window --format=esm --minify --sourcemap=external",
         "build:preloader:css": "esbuild src/preloader.css --outfile=dist/discovery-preloader.css --bundle --minify --loader:.svg=dataurl",
-        "build-gh-pages": "npm run transpile && discovery-build -o .gh-pages --clean",
+        "build-gh-pages": "npm run transpile && discovery-build -c gh-pages.config.cjs -o .gh-pages --clean --single-file --no-dev",
         "transpile": "node scripts/transpile.js",
         "prepublishOnly": "npm run transpile && npm run build",
         "cypress": "npx cypress open",
