--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "dependencies": {
         "@discoveryjs/json-ext": "^0.6.3",
         "codemirror": "^5.65.2",
+        "github-slugger": "^2.0.0",
         "hitext": "^1.0.0-beta.1",
         "jora": "1.0.0-beta.13",
-        "marked": "^4.3.0"
+        "marked": "^14.1.4"
     },
     "devDependencies": {
         "@discoveryjs/cli": "^2.11.1",
